# CUDAPlayground

./: .gitignore  CMakeLists.txt
src/: c_add.c  cuda_add.cu
